--- a/index.css
+++ b/index.css
@@ -79,6 +79,7 @@ body {
   font-weight: bold;
   font-size: large;
   padding: 5px;
+  transition-duration: 0.25s;
 }
 
 .modeButton:hover {
@@ -88,14 +89,22 @@ body {
 .modeButtonSelected {
   border: solid white 1px;
   border-radius: 5px;
+  transition-duration: 0.75s;
 }
 
 #modeField {
   display: none;
 }
 
+#gameOptions {
+  display: flex;
+  justify-content: space-between;
+}
+
 #amountSelector,
-#categorySelector {
+#categorySelector,
+#timeSelector,
+#difficultySelector {
   background-color: transparent;
   color: white;
   border: solid white 1px;
@@ -104,6 +113,11 @@ body {
   font-size: large;
   padding: 5px;
   cursor: pointer;
+  margin: 0px 5px;
+}
+
+.containerDisabled {
+  display: none;
 }
 
 option {
