--- a/trivia.css
+++ b/trivia.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
+
 * {
   padding: 0px;
   margin: 0px;
@@ -8,13 +10,6 @@ html,
 body {
   height: 100%;
   background: rgb(2, 0, 36);
-  /* background: linear-gradient(
-    29deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(121, 9, 90, 1) 25%,
-    rgba(24, 206, 93, 1) 75%,
-    rgba(0, 0, 0, 1) 100%
-  ); */
   background-image: linear-gradient(
     111.9deg,
     rgba(221, 49, 49, 1) 0.3%,
@@ -38,6 +33,7 @@ button {
 }
 
 @media only screen and (max-width: 600px) {
+  /* Mobile Ansicht */
   h2 {
     font-size: x-large;
   }
