--- a/trivia.css
+++ b/trivia.css
@@ -25,12 +25,12 @@ body {
 
 .darkTheme {
   background: #000000; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
+  background-image: -webkit-linear-gradient(
     to right,
     #434343,
     #000000
   ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
+  background-image: linear-gradient(
     to right,
     #434343,
     #000000
