--- a/trivia.css
+++ b/trivia.css
@@ -132,6 +132,7 @@ button {
 }
 
 #submitButton {
+  display: none;
   color: black;
   height: 50px;
   width: 150px;
@@ -147,6 +148,7 @@ button {
 }
 
 #nextButton {
+  color: black;
   display: none;
   height: 50px;
   width: 150px;
